# autohw2

./: .gitignore  Cargo.toml
frontend/: .eslintcache  .eslintignore  package-lock.json  package.json  tsconfig.json
frontend/config/: paths.js  webpack.config.js
frontend/public/: index.html  manifest.json
frontend/src/: AddHomework.tsx  App.tsx  AuthenticationView.tsx  ChangeSettings.tsx  Homepage.tsx  Navigation.tsx  SubjectSearch.tsx  Typeahead.tsx  service-worker.ts
frontend/src/Homepage/: EditModal.tsx  HomeworkCard.tsx
frontend/src/algorithm/: Cargo.toml
frontend/src/algorithm/src/: lib.rs
frontend/src/css/: custom.scss
frontend/src/utils/: Algorithm.ts  ApiFetch.ts  DateHook.ts  GlobalState.ts  Models.ts  Sort.ts  Tutorial.tsx  usePersistedState.ts
server/: .env  Cargo.toml
server/queries/: add_homework.sql  add_refresh.sql  apply_deltas.sql  changes-1.sql  get_subjects.sql  initialize.sql  login.sql  me.sql  new_user.sql  progress.sql  update_user.sql  use_refresh.sql
server/queries/delete_homework/: class.sql  user.sql
server/queries/get_homework/: 0.sql  1.sql
server/queries/update_homework/: class.sql  user.sql
server/src/: api.rs  auth.rs  main.rs
